--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -8,7 +8,8 @@
   clear: both;
   width: 300px;
   height: 240px;
-  border: 1px solid #000000; }
+ box-shadow: -1px 0 1px green,0 -1px 1px green,0 1px 1px green,1px 0 1px green;
+}
 
 .boxWrapper.auto {
   height: auto;
@@ -27,7 +28,10 @@
   float: left;
   clear: both;
   width: 300px;
-  height: auto; }
+  height: auto; 
+  margin-top:40px;
+  color: #666;
+}
 
 #qrContent p {
   font-size: 100%;
@@ -42,21 +46,15 @@
   text-align: center;
   width: 300px;
   height: 30px;
-  padding: 20px 0; }
-
-#button{
-  display: inline-block;
-  min-width: 300px;
-  text-align: center;
-  height: 20px;
-  line-height: 20px;
-  background: #000000;
-  color: #ffffff;
-  padding: 5px 10px; }
-
+  padding: 20px 0; 
+}
 #qrContent p {
   color: #000000; }
 
 #qrContent p a {
   color: #000000;
   text-decoration: underline; }
+
+button{
+  margin-right: 10px;
+}
