--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -3,7 +3,8 @@
   padding-top: 30px;
 }
 #start {
-  font: 50px "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif; 
+  font: 50px Helvetica, Arial, Verdana, sans-serif;
+  font-weight: bold;
 }
 #start a {
   text-decoration: none;
